--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
 				"ms-azuretools.vscode-bicep",
 				"ms-kubernetes-tools.vscode-kubernetes-tools",
 				"ms-azuretools.vscode-dapr",
-				"redhat.vscode-yaml"
+				"redhat.vscode-yaml",
+				"timonwong.shellcheck"
 			]
 		}
 	},
