yq dev container feature
Signed-off-by: Brooke Hamilton <45323234+brooke-hamilton@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 		"ghcr.io/rio/features/k3d:1": {},
 		"ghcr.io/dapr/cli/dapr-cli:0": {},
 		"./features/radius": {},
-		"./features/flux": {}
+		"./features/flux": {},
+		"./features/yq": {}
 	},
 	"customizations": {
 		"vscode": {
